backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: pfe-backend
  template:
    metadata:
      labels:
        app: pfe-backend
    spec:
      containers:
        - name: pfe-backend
          image: infrawatchchayma.azurecr.io/backend-pfe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: acr-auth
