backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfe-backend-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: pfe-backend
